--- a/RPGFinall/RPGFinall.csproj
+++ b/RPGFinall/RPGFinall.csproj
@@ -10,10 +10,51 @@
 
   <ItemGroup>
     <None Remove="bitmapa.png" />
+    <None Remove="Fonty\CinzelDecorative-Black.ttf" />
+    <None Remove="Fonty\CinzelDecorative-Bold.ttf" />
+    <None Remove="Fonty\CinzelDecorative-Regular.ttf" />
+    <None Remove="Fonty\UncialAntiqua-Regular.ttf" />
+    <None Remove="Obrazky\ArcherClass.png" />
+    <None Remove="Obrazky\KnightClass.png" />
+    <None Remove="Obrazky\MageClass.png" />
+    <None Remove="Obrazky\RogueClass.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Obrazky\ArcherClass.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Obrazky\KnightClass.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="bitmapa.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Fonty\CinzelDecorative-Black.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Fonty\CinzelDecorative-Bold.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Fonty\CinzelDecorative-Regular.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Fonty\UncialAntiqua-Regular.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Obrazky\MageClass.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Obrazky\RogueClass.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
